--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -6,6 +6,11 @@ pipeline {
     agent {
       node {
         // TODO: run this simple pipeline on jenkins 'master' node
+	agent {
+		node{
+			label 'master'
+		}
+	}
       }
     }
 
@@ -24,7 +29,11 @@ pipeline {
         }
 
         // TODO: ADD A STAGE THAT SAYS HELLO
-
+	stage('stage 2'){
+		steps{
+			sh 'echo Hello from stage 2!'
+		}
+	}
         // TODO: ADD AN APPROVAL STAGE
 
         stage('stage 3') {
@@ -32,6 +41,13 @@ pipeline {
                 sh 'echo hello from stage 3!. This is the last stage...'
             }
         }
+	stage('manual approval'){
+		step{
+			timeout(time:60, unit: 'MINUTES'){
+				input message: "Move to stage 3?"
+			}
+		}
+	}
 
     }
 }
